Remove DecentHologramsAPI class, Make DecentHolograms a singleton